id drive_for_client add

--- a/drivers/face.kv
+++ b/drivers/face.kv
@@ -7,6 +7,7 @@
 
     adress_call: adress_call
     start_job: start_job
+    drive_for_client: drive_for_client
 
     Label:
         id: adress_call
@@ -22,6 +23,7 @@
             root.start_job_method()
 
     Button:
+        id: drive_for_client
         text: 'Еду за пассажиром'
 
     Button:
