drive_for_client_method add

--- a/drivers/face.kv
+++ b/drivers/face.kv
@@ -25,6 +25,8 @@
     Button:
         id: drive_for_client
         text: 'Еду за пассажиром'
+        on_release:
+            root.drive_for_client_method()
 
     Button:
         text: 'Ожидаю пассажира'
